# Assignment_1

./: .travis.yml  CMakeLists.txt  README.md
cmake/: FindGLEW.cmake  FindGLFW.cmake  FindLIBIGL.cmake
data/: gargo.off  sphere_lo_norm.off
src/: main.cpp
